# mondaydotcom-notebooks

./: .gitignore  README.md  create_environment_file.yaml  cunaf-wiring.yaml  project.cue  pyproject.toml  wiring.yaml
cue.mod/: module.cue
inventory/prod/group_vars/all/: vars.yaml  vault.yaml
mondaydotcom-notebooks/: Mondaydotcom Create Monthly Task Data Exports.ipynb  Mondaydotcom Create Monthly Task Exports.ipynb  Mondaydotcom Create Monthly Task Reports.bpmn  Mondaydotcom Create Monthly Task Reports.ipynb  Mondaydotcom Create Periodic Project Updates.bpmn  Mondaydotcom Create Periodic Project Updates.ipynb  Mondaydotcom Set Task Integration Status.bpmn  Mondaydotcom Set Task Integration Status.ipynb  Untitled.ipynb  diagram_1.bpmn
mondaydotcom-notebooks/schema/: effort_hours-client.json  effort_hours-project.json  effort_hours-report.json  effort_hours-resource.json  effort_hours-task.json
templates/: env-file.j2
